Bug 299525 - ENTER should trigger the search on the screen to search transactions
Summary: ENTER should trigger the search on the screen to search transactions
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-06 19:53 UTC by Helder
Modified: 2012-05-08 19:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Helder 2012-05-06 19:53:51 UTC
I think it would be more intuitive to show the results as soon as the user press the key ENTER.

Reproducible: Always

Steps to Reproduce:
1. Press CTRL+F to open the screen used to search transactions
2. Type some value in the field (e.g. "123")
3. Press ENTER

Actual Results:  
Nothing happens

Expected Results:  
KMyMoney should show the search results (as if the user clicked in the Search button or pressed ALT+E)
Comment 1 Cristian Oneț 2012-05-08 17:02:14 UTC
Git commit 91dd48fbad03d4b9316fdb7842dc20263bf75f04 by Cristian Oneț.
Committed on 08/05/2012 at 18:57.
Pushed by conet into branch 'master'.

In the 'Find transactions' dialog trigger a search when return is
pressed and there is text entered in the filter.

Althoug there are standard shortcuts for this action the newly
added behavior seems to optimize a usual workflow (text search).

Added a clear button to the text filter as a bonus.

M  +6    -0    kmymoney/dialogs/kfindtransactiondlg.cpp
M  +3    -0    kmymoney/dialogs/kfindtransactiondlgdecl.ui

http://commits.kde.org/kmymoney/91dd48fbad03d4b9316fdb7842dc20263bf75f04
Comment 2 Cristian Oneț 2012-05-08 17:02:51 UTC
Git commit e0546e9c6762d51af3c50da694a1c7fd97e6595c by Cristian Oneț.
Committed on 08/05/2012 at 18:57.
Pushed by conet into branch '4.6'.

In the 'Find transactions' dialog trigger a search when return is
pressed and there is text entered in the filter.

Althoug there are standard shortcuts for this action the newly
added behavior seems to optimize a usual workflow (text search).

Added a clear button to the text filter as a bonus.
(cherry picked from commit 91dd48fbad03d4b9316fdb7842dc20263bf75f04)

M  +6    -0    kmymoney/dialogs/kfindtransactiondlg.cpp
M  +3    -0    kmymoney/dialogs/kfindtransactiondlgdecl.ui

http://commits.kde.org/kmymoney/e0546e9c6762d51af3c50da694a1c7fd97e6595c
Comment 3 allan 2012-05-08 19:24:35 UTC
Another bonus (!) might be. when searching for a value, not to have to remember to include a 'thousands separator' for the search to find a value that contains one?