In the 'Find transactions' dialog trigger a search when return is pressed and there is text entered in the filter.

Althoug there are standard shortcuts for this action the newly
added behavior seems to optimize a usual workflow (text search).

Added a clear button to the text filter as a bonus.

BUG: 299525
(cherry picked from commit 91dd48fbad03d4b9316fdb7842dc20263bf75f04)